[project]
name = "soundcharts"
version = "1.0.1"
authors = [
  { name="Soundcharts Tech", email="tech@soundcharts.com" },
]
description = "A Python package for interacting with the Soundcharts API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "requests>=2.25.1",
    "aiohttp",
]

[project.urls]
Homepage = "https://github.com/soundcharts/python-sdk"

Issues = "https://github.com/soundcharts/python-sdk/issues"
